# ai-cms

./: .gitignore  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ruff.yml
aicms/: asgi.py  settings.py  urls.py  wsgi.py
pages/: admin.py  models.py  services.py  tasks.py  utils.py  views.py
pages/migrations/: 0001_initial.py  0002_remove_page_ai_model.py  0003_page_generation_error_page_generation_status.py
pages/templates/pages/: generated_layout.html  generation_failed.html  generation_in_progress.html
