[project]
name = "aicms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blessed>=1.21.0",
    "django>=5.2.1",
    "django-environ>=0.12.0",
    "django-q2>=1.8.0",
    "openai>=1.82.0",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.9",
    "requests>=2.32.3",
]
